<resources>
    <string name="app_name">Loja de Conveniência</string>
    <string name="action_settings">Settings</string>

    <string name="produto">Produto</string>
    <string name="preco">Preço</string>
    <string name="hintProduto">Informe o nome do Produto</string>
    <string name="hintPreco">Informe o preço do produto</string>
    <string name="ckecboxImportado">Produto Importado</string>
    <string name="buttonSalvar">Salvar</string>
</resources>